[package]
name = "mksvg"
version = "0.3.0"
authors = ["coderconvoy <thebeaky@psmail.net>"]
description = "A Crate for writing svgs and laying out printable cards"
license = "MIT"
repository = "https://github.com/storyfeet/mksvg_rs"
edition = "2018"
readme = "readme.md"

[dependencies]

num = "0.1"
#failure = "0.1.7"
#failure_derive = "0.1.7"
anyhow = "1.0.31"
thiserror="1.0.19"
